<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TM SWIFT Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="last_known_location">Last Known Location</string>
    <string name="location_updates">Location Updates</string>
    <string name="task">My Task</string>
    <string name="queue">Update Queue</string>
    <string name="network">Test Network</string>
    <string name="signout">Sign Out</string>
    <string name="background_update_key">background_update_key</string>
    <string name="background_update_title">Background Updates</string>
    <string name="background_update_summary">Enable background location updates</string>
    <string name="interval_key">interval_key</string>
    <string name="interval_title">Interval (ms)</string>
    <string name="displacement_key">displacement_key</string>
    <string name="displacement_title">Smallest Displacement (m)</string>
    <string name="priority_key">priority_key</string>
    <string name="priority_title">Priority</string>
    <string name="mock_mode_key">mock_mode_key</string>
    <string name="mock_mode_title">Mock Mode</string>
    <string name="mock_mode_summary">Enable mock locations</string>
    <string name="mock_lat_key">mock_lat_key</string>
    <string name="mock_lat_title">Mock Latitude</string>
    <string name="mock_lng_key">mock_lng_key</string>
    <string name="mock_lng_title">Mock Longitude</string>
    <string name="mock_accuracy_key">mock_accuracy_key</string>
    <string name="mock_accuracy_title">Mock Accuracy</string>
    <string name="mock_mode_gpx_key">mock_gpx_key</string>
    <string name="mock_mode_gpx_title">GPX Trace Mode</string>
    <string name="mock_mode_gpx_summary">Replay mock GPX trace from file</string>
    <string name="mock_gpx_file_key">mock_gpx_file_key</string>
    <string name="mock_gpx_file_title">GPX Filename</string>
    <string name="sample_fused_location_api_title">FusedLocationApi</string>
    <string name="sample_fused_location_api_description">Demonstrates how to request location updates using the FusedLocationApi</string>
    <string name="sample_geofencing_api_title">GeofencingApi</string>
    <string name="sample_geofencing_api_description">Demonstrates how use proximity alerts with the GeofencingApi</string>
    <string name="sample_settings_api_title">SettingsApi</string>
    <string name="sample_settings_api_description">Demonstrates how to use the SettingsApi to request network status and resolve issues with the current status when it isn\'t enabled</string>
    <string name="gps_present">Gps present:</string>
    <string name="gps_usable">Gps usable:</string>
    <string name="network_present">Network present:</string>
    <string name="network_usable">Network usable:</string>
    <string name="location_present">Location present:</string>
    <string name="location_usable">Location usable:</string>
    <string name="ble_present">Ble present:</string>
    <string name="ble_usable">Ble usable:</string>
    <string name="check_location_settings">Check location settings</string>
    <string name="resolve_location_settings">Resolve location settings</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="request_id">requestId</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="radius">radius</string>
    <string name="create">Create</string>
    <string name="sample_location_listener_title">LocationListener</string>
    <string name="sample_location_listener_description">Demonstrates how to use a LocationListener to receive location updates</string>
    <string name="request_updates">Request Updates</string>
    <string name="pending_intent">Pending Intent</string>
    <string name="sample_pending_intent_title">PendingIntent</string>
    <string name="sample_pending_intent_description">Demonstrates how to use a PendingIntent to receive location updates</string>
    <string name="requested">Requested</string>
    <string name="sample_location_availability_title">Location Availability</string>
    <string name="sample_location_availability_description">Demonstrates how to determine if location requested is available</string>
    <string name="check_availability">Check Availability</string>
    <string name="location_available">Location Available</string>
    <string name="location_unavailable">Location NOT Available</string>
    <string name="sample_multiple_clients_diff_intervals_title">Multiple Clients w/different Intervals</string>
    <string name="sample_multiple_clients_diff_intervals_description">Demonstrates how multiple clients can request location updates at different fastest intervals</string>
    <string name="sample_single_client_diff_intervals_title">Single Client w/different Intervals</string>
    <string name="sample_single_client_diff_intervals_description">Demonstrates how a single client can request location updates at different fastest intervals</string>
    <string name="sample_multiple_clients_priorities_title">Multiple Clients w/different request priorities</string>
    <string name="sample_multiple_clients_priorities_description">Demonstrates multiple clients receiving location requests for different location priorities</string>
    <string name="sample_multiple_process_title">Multiple processes w/different clients</string>
    <string name="sample_multiple_process_description">Demonstrates using lost in the main app process as well as in a service running in its own process</string>
    <string name="mock_gpx_file_default_value">lost.gpx</string>
    <string name="shared_pref_package">com.plamera.tmswiftlauncher</string>
    <string name="shared_pref_location">location</string>
    <string name="folder_name"></string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Errorall_apps_cling_add_itemcustom workspace layout passed in but custom cling was not overwritten</string>
    <string name="default_folder_name" />
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"></string>
    <string name="custom_workspace_cling_description_1"></string>
    <string name="custom_workspace_cling_title_2"></string>
    <string name="custom_workspace_cling_description_2"></string>
<string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d \u00d7 %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="output">output</string>
    <string name="login">LOGIN</string>
    <string name="test_network">TEST \nNETWORK</string>
    <string name="help">HELP</string>
    <string name="call">CALL</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="show">Show</string>
    <string name="show_password">Show Password</string>
</resources>